chore: ignore local rename_notebooks helper

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ __pycache__/
 # data files (jika ada)
 data/
 social-media-sentiment-analysis/rename_notebooks.py
+social-media-sentiment-analysis/rename_notebooks.py
