--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿# Virtual env
+# Virtual env
 social-media-sentiment-analysis/venv/
 # Python cache
 __pycache__/
@@ -9,5 +9,4 @@ __pycache__/
 data/
 social-media-sentiment-analysis/rename_notebooks.py
 social-media-sentiment-analysis/rename_notebooks.py
-social-media-sentiment-analysis/models/
 social-media-sentiment-analysis/figures/
