--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ social-media-sentiment-analysis/models/* filter=lfs diff=lfs merge=lfs -text
 social-media-sentiment-analysis/data/**/* filter=lfs diff=lfs merge=lfs -text
 social-media-sentiment-analysis/models/** filter=lfs diff=lfs merge=lfs -text
 social-media-sentiment-analysis/data/** filter=lfs diff=lfs merge=lfs -text
+social-media-sentiment-analysis/results/** filter=lfs diff=lfs merge=lfs -text
