chore(results): keep 1 CSV, 1 HTML, 1 XLSX in results; move others to backup

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ venv/
 
 # ignore virtual environment
 .venv/
+
+# Ensure results are tracked
+!social-media-sentiment-analysis/results/
+!social-media-sentiment-analysis/results/**
