--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,39 @@
-# Virtual env
+﻿# Virtual envs
+.venv/
+venv/
+
 # Python cache
 __pycache__/
 *.pyc
-# Jupyter checkpoints
+
+# Jupyter
 .ipynb_checkpoints/
-# data files (jika ada)
-data/
-social-media-sentiment-analysis/rename_notebooks.py
-social-media-sentiment-analysis/rename_notebooks.py
-social-media-sentiment-analysis/figures/
 
-.venv/
+# Data: ignore raw input data
+data/raw/
+# data/*.csv   # uncomment if you want to ignore all CSVs in data/
 
-venv/
+# Environment files
+.env
 
+# SQLite DBs
+*.sqlite
+
+# macOS / OS files
+.DS_Store
+
+# IDEs / editors
+.idea/
 .vscode/
 
-# ignore virtual environment
-.venv/
+# Logs inside results (optional)
+social-media-sentiment-analysis/results/logs/
 
-# ignore virtual environment
-.venv/
-
-# ignore virtual environment
-.venv/
-
-# Ensure results are tracked
+# keep results themselves tracked (negation)
 !social-media-sentiment-analysis/results/
 !social-media-sentiment-analysis/results/**
 
-# ignore virtual env and pycache
+# ignore virtual env and python cache variants
 social-media-sentiment-analysis/venv/
 __pycache__/
 *.pyc
-
-# ignore virtual environment
-.venv/
