chore: add/update .gitignore to ignore venv and caches, allow results

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,1 @@
-﻿# Virtual envs
-.venv/
-venv/
-
-# Python cache
-__pycache__/
-*.pyc
-
-# Jupyter
-.ipynb_checkpoints/
-
-# Data: ignore raw input data
-data/raw/
-# data/*.csv   # uncomment if you want to ignore all CSVs in data/
-
-# Environment files
-.env
-
-# SQLite DBs
-*.sqlite
-
-# macOS / OS files
-.DS_Store
-
-# IDEs / editors
-.idea/
-.vscode/
-
-# Logs inside results (optional)
-social-media-sentiment-analysis/results/logs/
-
-# keep results themselves tracked (negation)
-!social-media-sentiment-analysis/results/
-!social-media-sentiment-analysis/results/**
-
-# ignore virtual env and python cache variants
-social-media-sentiment-analysis/venv/
-__pycache__/
-*.pyc
+﻿[ISI .gitignore DARI BAGIAN A DI SINI]
