--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@ social-media-sentiment-analysis/data/**/* filter=lfs diff=lfs merge=lfs -text
 social-media-sentiment-analysis/models/** filter=lfs diff=lfs merge=lfs -text
 social-media-sentiment-analysis/data/** filter=lfs diff=lfs merge=lfs -text
 social-media-sentiment-analysis/results/** filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
