--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ social-media-sentiment-analysis/results/** filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.npy filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
