--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ social-media-sentiment-analysis/results/** filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.npy filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+data/large-file.dat filter=lfs diff=lfs merge=lfs -text
